examples/negative/derive/derive_eq_no_field_eq.kai
# Negative fixture (#511 / derive contract): `#derive(Eq)` on
# `Pixel` requires every field to have an Eq impl. `Color`
# has no Eq impl — derive expansion must reject.

type Color = { r: Int, g: Int, b: Int }

#[derive(Eq)]
type Pixel = { id: Int, color: Color }

fn main() : Int = 0
